test/fail/internal/invalid_match_case_return_fold.lly
#[
SyntaxError: Missing return statement at end of function.
Where: File "invalid_match_case_return_fold.lly" at line 16
]#

enum class Option[A] { Some(A) None }

define f(a: Option[integer] => integer)
{
    match a: {
        case Some(s):
            s = 1
        case None:
            return 2
    }
}
